@@ -151,6 +151,9 @@ class Request:
 
     # Process the query params
     for name, values in self.server.params().items():
+      # we only care about the first value
+      value = values[0]
+      
       # patch up old queries that use 'cvsroot' to look like they used 'root'
       if name == 'cvsroot':
         name = 'root'
@@ -161,25 +164,18 @@ class Request:
         name = 'pathrev'
         needs_redirect = 1
 
-      # validate the parameter
-      _validate_param(name, values[0])
+      # redirect view=rev to view=revision, too
+      if name == 'view' and value == 'rev':
+        value = 'revision'
+        needs_redirect = 1
 
-      # Only allow the magic ViewVC MIME types (the ones used for
-      # requesting the markup as as-text views) to be declared via CGI
-      # params.  Ignore disallowed values.
-      if (name == 'content-type') and \
-         (not values[0] in (viewcvs_mime_type,
-                            alt_mime_type,
-                            'text/plain')):
-        continue
+      # validate the parameter
+      _validate_param(name, value)
       
       # if we're here, then the parameter is okay
-      self.query_dict[name] = values[0]
+      self.query_dict[name] = value
 
-    # handle view parameter, redirecting old view=rev URLs to view=revision
-    if self.query_dict.get('view') == 'rev':
-      self.query_dict['view'] = 'revision'
-      needs_redirect = 1
+    # Resolve the view parameter into a handler function.
     self.view_func = _views.get(self.query_dict.get('view', None), 
                                 self.view_func)
 
@@ -630,8 +626,12 @@ def _validate_param(name, value):
         value, '400 Bad Request')
     return
 
-  # the validator must be a function
-  validator(value)
+  # the validator must be a function, so execute it and see if it
+  # returns true (that is, "valid")
+  if not validator(value):
+    raise debug.ViewVCException(
+      'An illegal value ("%s") was passed as a parameter.' %
+      value, '400 Bad Request')
 
 def _validate_regex(value):
   # hmm. there isn't anything that we can do here.
@@ -641,6 +641,15 @@ def _validate_regex(value):
   ### parameters could constitute a CSS attack.
   pass
 
+def _validate_view(value):
+  # Return true iff VALUE is one of our allowed views.
+  return _views.has_key(value)
+
+def _validate_mimetype(value):
+  # For security purposes, we only allow mimetypes from a predefined set
+  # thereof.
+  return value in (viewcvs_mime_type, alt_mime_type, 'text/plain')
+
 # obvious things here. note that we don't need uppercase for alpha.
 _re_validate_alpha = re.compile('^[a-z]+$')
 _re_validate_number = re.compile('^[0-9]+$')
@@ -649,10 +658,6 @@ _re_validate_boolint = re.compile('^[01]$')
 # when comparing two revs, we sometimes construct REV:SYMBOL, so ':' is needed
 _re_validate_revnum = re.compile('^[-_.a-zA-Z0-9:~\\[\\]/]*$')
 
-# it appears that RFC 2045 also says these chars are legal: !#$%&'*+^{|}~`
-# but woah... I'll just leave them out for now
-_re_validate_mimetype = re.compile('^[-_.a-zA-Z0-9/]+$')
-
 # date time values
 _re_validate_datetime = re.compile(r'^(\d\d\d\d-\d\d-\d\d(\s+\d\d:\d\d'
                                    '(:\d\d)?)?)?$')
@@ -660,7 +665,7 @@ _re_validate_datetime = re.compile(r'^(\d\d\d\d-\d\d-\d\d(\s+\d\d:\d\d'
 # the legal query parameters and their validation functions
 _legal_params = {
   'root'          : None,
-  'view'          : None,
+  'view'          : _validate_view,
   'search'        : _validate_regex,
   'p1'            : None,
   'p2'            : None,
@@ -682,7 +687,7 @@ _legal_params = {
   'r2'            : _re_validate_revnum,
   'tr2'           : _re_validate_revnum,
   'revision'      : _re_validate_revnum,
-  'content-type'  : _re_validate_mimetype,
+  'content-type'  : _validate_mimetype,
 
   # for query
   'branch'        : _validate_regex,
