@@ -1,5 +1,6 @@
 Version 1.1.2 (released ??-???-????)
 
+  * security fix: validate the 'view' parameter to avoid XSS attack
   * add optional support for character encoding detection (issue #400)
   * fix username case handling in svnauthz module (issue #419)
   * fix cvsdbadmin/svnadmin rebuild error on missing repos (issue #420)
